--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@nestjs/typeorm": "^7.1.3",
 		"chalk": "^4.1.0",
 		"express-rate-limit": "^5.1.3",
+		"helmet": "^4.2.0",
 		"morgan": "^1.10.0",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
