--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
   "singleQuote": true,
-  "useTabs": true,
-  "trailingComma": "all",
+  "tabWidth": 2,
+  "trailingComma": "es5",
   "endOfLine": "crlf"
 }
