--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/cli": "^7.5.3",
     "@nestjs/schematics": "^7.2.2",
     "@types/express": "^4.17.9",
+    "@types/express-rate-limit": "^5.1.2",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.9",
     "@typescript-eslint/eslint-plugin": "4.8.1",
